<resources>
    <string name="app_name">coffee</string>
    <string name="index">首页</string>
    <string name="new_products">新品</string>
    <string name="discount">优惠</string>
    <string name="community">论坛</string>
    <string name="mine">我的</string>

    <string name="online_num">在线人数：</string>
    <string name="people">人</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login_third">第三方登录</string>
    <string name="phone">手机号</string>
    <string name="password">6-18位登录密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_account">注册账号</string>
    <string name="login">立即登录</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password_2">请输入6-18位新密码</string>
    <string name="input_password_1">请输入6-18位登录密码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="verification_code">验证码</string>
    <string name="agreement_key">注册即代表同意</string>
    <string name="agreement">《无人咖啡机平台协议》</string>
    <string name="agreement_title">无人咖啡机平台服务协议</string>
    <string name="to_login_or_register">登录/注册 ></string>

    <string name="my_order">我的订单</string>
    <string name="find_all">查看全部 ></string>
    <string name="pending_payment">待付款</string>
    <string name="usable">未取杯</string>
    <string name="refund">退款售后</string>

    <string name="setting">设置</string>
    <string name="esc_login">退出登录</string>
    <string name="mine_info">个人资料</string>
    <string name="update_login_password">修改登录密码</string>
    <string name="set_pay_password">支付密码设置</string>
    <string name="current_version">当前版本</string>
    <string name="clear_cache">清楚缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">出生年月</string>
    <string name="phoneNum">手机号码</string>
    <string name="address">我的地址</string>

    <string name="comment">评论</string>
    <string name="leave_message">留言</string>
    <string name="submit">提交</string>
    <string name="q_x_q_y">全心券意</string>
    <string name="buy_gift_card">购买储值卡</string>
    <string name="ok_buy">确认购买</string>
    <string name="to_personal_center">前往个人中心</string>
    <string name="ok_send">确认发送</string>
    <string name="resend">重新发送</string>
    <string name="holiday">节日大酬宾</string>
    <string name="receive_success">领取成功</string>
    <string name="ok">确认</string>
    <string name="to_login">登录</string>
    <string name="refund_coupon">优惠券转赠</string>
    <string name="refund_allowance">补贴转赠</string>
    <string name="refund_gift_card">储值卡转赠</string>
    <string name="allowance">补贴</string>
    <string name="coupon">优惠券</string>
    <string name="gift_card">储值卡</string>
    <string name="play_invoice">开发票</string>
    <string name="write_invoice">填写发票抬头</string>
    <string name="play_invoice_by_order">按订单开票</string>
    <string name="submit_success">提交成功</string>
    <string name="message">消息</string>
    <string name="message_detail">消息详情</string>
    <string name="my_address">我的地址</string>
    <string name="add_address">添加地址</string>
    <string name="my_allowance">我的补贴</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_consume_record">我的消费记录</string>
    <string name="my_gift_card">我的储值卡</string>
    <string name="buy_record">购买记录</string>
    <string name="my_leave_message">我的留言</string>
    <string name="my_point">我的积点</string>
    <string name="my_score">我的积分</string>
    <string name="submit_order">提交订单</string>
    <string name="my_red_package">我的红包</string>
    <string name="order_detail">订单详情</string>
    <string name="product_list">产品列表</string>
    <string name="play_refund">申请退款</string>
    <string name="play_refund_result">申请退款结果</string>
    <string name="clear_cache_success">缓存清除成功</string>
    <string name="update_nickname">修改昵称</string>
    <string name="vip_level">会员等级</string>

    <string name="tip">提示</string>
    <string name="know">知道了</string>
    <string name="no_make">很抱歉，您点的咖啡目前该门店制作材料不足，可尝试换其他门店</string>
    <string name="reach_limit">您的添加已达到上限5份了，不能再添加了哦！</string>

    <string name="delete_text">确定不要我了吗？</string>
    <string name="yes">确定</string>
    <string name="no">算了</string>

    <string name="no_need_invoice">不需要发票</string>
    <string name="need_invoice">需要发票</string>
    <string name="invoice_type">发票类型</string>
    <string name="e_invoice">电子发票</string>
    <string name="invoice_details">发票详情</string>
    <string name="invoice_header_type">抬头类型</string>
    <string name="invoice_header_type_input">请填写发票抬头</string>
    <string name="invoice_enterprise"> \t 企业</string>
    <string name="invoice_personal"> \t 个人</string>
    <string name="invoice_tax_id">税号</string>
    <string name="invoice_tax_id_input">请填写纳税人识别号</string>
    <string name="invoice_content">发票内容</string>
    <string name="invoice_content_input">咖啡采购费</string>
    <string name="invoice_money">发票金额</string>
    <string name="invoice_received_info">收件信息</string>
    <string name="invoice_email">电子邮件</string>
    <string name="invoice_email_input">用于向您发送电子发票</string>
    <string name="second_half_price">第二杯半价</string>

    <string name="select">请选择...</string>
    <string name="to_login_account">登录账号</string>
    <string name="invoicing_record">开票历史</string>
    <string name="invoicing_detail">开票详情</string>
    <string name="point_record">兑换记录</string>
    <string name="point_detail">积点明细</string>
    <string name="gift_card_details">储值卡详情</string>
    <string name="gift_card_add">添加储值卡</string>
    <string name="set_gift_card_password">设置储值卡密码</string>
    <string name="gift_card_ok">确认</string>
    <string name="gift_card_ok_add">确认添加</string>
    <string name="transaction_details">交易明细</string>
    <string name="git_card_added">已添加</string>
    <string name="git_card_no_added">未添加</string>
    <string name="buy_card_details">购买明细</string>
    <string name="donated_details">转赠明细</string>
    <string name="article">文章</string>
    <string name="pay_success">支付成功</string>

    <string name="tv_feedback_agree_level">满意程度</string>
    <string name="tv_feedback_style">反馈类型</string>
    <string name="et_suggest">说说您的建议（请不要少于五个字）</string>
    <string name="tv_upload_image">上传照片</string>
    <string name="tv_me_agreement">我已阅读并同意</string>
    <string name="gift_card_use_agreement">《无人咖啡机充值卡使用规则》</string>
    <string name="tv_pay_wx">微信支付</string>
    <string name="tv_pay_zfb">支付宝支付</string>
    <string name="tv_pay_method">支付方式</string>
    <string name="tv_num">数量:</string>
    <string name="tv_money">金额:</string>
    <string name="tv_coupon">优惠券</string>
    <string name="tv_use">立即使用</string>
    <string name="tv_donate">转赠</string>
    <string name="et_input_donate_phone">请输入被转赠人的手机号码</string>
    <string name="btn_ok_donate">确认转赠</string>
    <string name="tv_card_num">卡号</string>
    <string name="et_card_num">储值卡卡号</string>
    <string name="tv_password">密码</string>
    <string name="et_password">储值卡密码</string>
    <string name="btn_ok_add">确认添加</string>
    <string name="tv_to_add_card">去添加卡</string>
    <string name="tv_buy_money">购买金额</string>
    <string name="tv_current_last_money">当前余额</string>
    <string name="tv_get_from">获得来源</string>
    <string name="tv_buy_time">购买时间</string>
    <string name="cb_all_select">全选</string>
    <string name="btn_next">下一步</string>
    <string name="tv_look"><![CDATA[查看>]]></string>
    <string name="btn_submit">提交</string>
    <string name="tv_submit_success">提交成功</string>
    <string name="close_page">秒后自动关闭当前页面</string>
    <string name="et_comment">说说您的评论（请不要少于五个字）</string>
    <string name="tv_login_by_qq">QQ登录</string>
    <string name="tv_login_by_wx">微信登录</string>
    <string name="tv_login_by_wb">微博登录</string>
    <string name="tv_play_invoice">开发票</string>
    <string name="tv_play_invoice_history">开发历史</string>
    <string name="tv_play_agreement">开票规则</string>
    <string name="tv_no_address">您当前暂无地址</string>
    <string name="btn_add_address">添加地址</string>
    <string name="tv_name">姓名</string>
    <string name="tv_address_in">所在地区</string>
    <string name="tv_to_select"><![CDATA[请选择 >]]></string>
    <string name="tv_nearby">附近家族</string>
    <string name="tv_no_used">未使用</string>
    <string name="tv_used">已使用</string>
    <string name="tv_expired">已过期</string>
    <string name="tv_thank_you">感谢您的贡献，让我快快长大</string>
    <string name="tv_shopping_record">消费记录</string>
    <string name="tv_point">积点</string>
    <string name="tv_change">兑换记录</string>
    <string name="tv_point_change">积点兑换</string>
    <string name="tv_use_agreement">使用规则</string>
    <string name="tv_current_score">当前积分</string>
    <string name="tv_score_record">积分收入明细</string>
    <string name="tv_all">全部</string>
    <string name="tv_pending_pay">待付款</string>
    <string name="tv_order_usable">未取杯</string>
    <string name="tv_order_refund">退款/售后</string>
    <string name="tv_pay">立即付款</string>
    <string name="tv_cancel_order">取消订单</string>
    <string name="tv_order_info">订单信息</string>
    <string name="tv_numbering">订单编号:</string>
    <string name="tv_buy_phone">购买手机号:</string>
    <string name="tv_order_time">下单时间:</string>
    <string name="tv_use_coupon">使用优惠券:</string>
    <string name="tv_real_pay">实付款:</string>
    <string name="tv_refund_num">退款金额:</string>
    <string name="tv_refund_method">退款方式:</string>
    <string name="tv_get_success">恭喜您，领取成功</string>
    <string name="btn_use">立即使用</string>
    <string name="tv_thank">感谢您的参与，祝您购物愉快</string>
    <string name="btn_back_index">返回首页</string>
    <string name="btn_play_refund">申请退款</string>
    <string name="tv_order_code">订单取杯码</string>
    <string name="tv_back_content">退还内容</string>
    <string name="tv_crash">现金:</string>
    <string name="tv_back_methos">退还方式</string>
    <string name="tv_back_re">原路退回</string>
    <string name="tv_back_reason">退款原因</string>
    <string name="tv_no_fund_address">找不到门店地址</string>
    <string name="tv_make_failed">制作失败</string>
    <string name="tv_other">其他</string>
    <string name="tv_refund_success">申请退款成功，等待后台审核</string>
    <string name="tv_refund_money">退款金额</string>
    <string name="btn_finish">完成</string>
    <string name="tv_panic_buying">抢购中</string>
    <string name="tv_to_stop">距结束</string>
    <string name="tv_no_use_coupon">不使用优惠券</string>
    <string name="tv_have">有</string>
    <string name="tv_coupon_num">个优惠券可用</string>
    <string name="tv_for_gift_card">请为储值卡</string>
    <string name="tv_set_six_password">设置6位数字支付密码</string>
    <string name="tv_delete_success">成功删除1件产品，如果有误，可</string>
    <string name="tv_reset_delete">撤销本次删除</string>
    <string name="tv_sum">合计：￥</string>
    <string name="tv_to_buy">立即结账</string>
    <string name="tv_pending_payment">待支付</string>
    <string name="tv_submit_order">提交订单</string>

</resources>
