<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ichuk.coffee.activity.mine.RefundActivity">

    <include
        android:id="@+id/header"
        layout="@layout/layout_activity_toolbar" />

    <Button
        android:id="@+id/btn_play_refund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@color/brown"
        android:text="@string/btn_play_refund"
        android:textColor="@color/md_white_1000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_play_refund"
        android:layout_below="@id/header"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_order_code" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_back_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/md_white_1000"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_content_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_crash" />

            <TextView
                android:id="@+id/tv_content_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tv_content_key"
                android:text="1114"
                android:textColor="@color/red" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_back_methos" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/md_white_1000"
            android:paddingRight="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_back_re" />

            <ImageView
                android:id="@+id/iv_old_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_selected" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/tv_back_reason" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingRight="10dp"
            android:background="@color/md_white_1000"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_no_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_no_fund_address" />

            <ImageView
                android:id="@+id/iv_check_reason_find"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_check" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/md_grey_300" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingRight="10dp"
            android:background="@color/md_white_1000"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_do_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_make_failed" />

            <ImageView
                android:id="@+id/iv_check_reason_do_failed"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_checked" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/md_grey_300" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingRight="10dp"
            android:background="@color/md_white_1000"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_other" />

            <ImageView
                android:id="@+id/iv_check_reason_other"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_check" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
