<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/md_white_1000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="申请退款提示"
        android:textSize="17sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/delete_text"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/md_grey_300"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_delete_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:gravity="center"
            android:textColor="@color/brown" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/md_grey_300" />

        <TextView
            android:id="@+id/tv_delete_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/yes"
            android:gravity="center"
            android:textColor="@color/brown" />

    </LinearLayout>

</LinearLayout>