<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.ichuk.coffee.activity.mine.OrderActivity">

    <include layout="@layout/layout_activity_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/md_white_1000"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_unused"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_no_used" />

        <TextView
            android:id="@+id/tv_used"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_used" />

        <TextView
            android:id="@+id/tv_expired"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_expired" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/v_unused"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/md_white_1000" />

        <View
            android:id="@+id/v_used"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/md_white_1000" />

        <View
            android:id="@+id/v_expired"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/md_white_1000" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"></android.support.v7.widget.RecyclerView>

</LinearLayout>
