<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ichuk.coffee.activity.MainActivity">

    <!--<include layout="@layout/layout_main_toolbar"-->
        <!--android:id="@+id/header"/>-->

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/md_white_1000"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_home"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_home" />

            <TextView
                android:id="@+id/tv_main_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ll_new_products">

            <ImageView
                android:id="@+id/iv_main_new_products"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_new_products" />

            <TextView
                android:id="@+id/tv_main_new_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_products"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ll_discount">

            <ImageView
                android:id="@+id/iv_main_discount"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_discuss"
                />

            <TextView
                android:id="@+id/tv_main_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ll_community">

            <ImageView
                android:id="@+id/iv_main_community"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_community" />

            <TextView
                android:id="@+id/tv_main_community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ll_mine">

            <ImageView
                android:id="@+id/iv_main_mine"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_mine" />

            <TextView
                android:id="@+id/tv_main_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_above="@id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/md_grey_300"/>

    <FrameLayout
        android:id="@+id/fl_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view"></FrameLayout>


</RelativeLayout>
